tests/NormalTests/paczka1/small_fuzzy/43166345.err
Error in line 1: 4pYaO3 S183 10,0
Error in line 4: 4pYaO3 S798 63,9
Error in line 2: S740 S798 37,8
Error in line 7: DPHR06o A306 44,9
Error in line 13: NkP2E1JX8 S183 21,1
